Fixed padding at top on mobile layout

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,8 +40,7 @@ body {
 
 .layout-container {
     max-width: 1032px;
-    padding: 1rem;
-    padding-top: 4.76rem;
+    padding: 1rem; 
     margin: auto;
 }
 
